syntax = "proto3";

package protos;

message Empty {
}

//
service CommitsService {
    rpc Commits (CommitsRequest) returns (stream CommitsResponse) {
    }
}

message CommitsRequest {
    int32 message = 1;
}

message CommitsResponse {
    string message = 1;
    bool deployed = 2;
    int64 time = 3;
    string link = 4;
    bool highlight = 5;
    string hash = 6;
}

//
service SteamAPIService {
    rpc SteamAPI (Empty) returns (stream SteamAPIResponse) {
    }
}

message SteamAPIResponse {
}
